--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haifa’s Honest Tech Reviews</title>
+    <title>Code with Haifa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Haifa’s Honest Tech Reviews</h1>
+        <h1>Haifa’s Web Dev Journey
+        </h1>
         <p class="tagline">Documenting my web dev journey, one bug at a time.</p>
     </header>
 
