--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code with Haifa</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Haifa’s Web Dev Journey
@@ -15,7 +17,8 @@
 
     <section class="about">
         <h2>About This Blog</h2>
-        <p>Hello! I’m Haifa, a software engineering student learning HTML, CSS, JavaScript, and more. This blog is where I share what I learn, the mistakes I make, and tips that might help others.</p>
+        <p>Hello! I’m Haifa, a software engineering student learning HTML, CSS, JavaScript, and more. This blog is where
+            I share what I learn, the mistakes I make, and tips that might help others.</p>
     </section>
 
     <section class="posts">
@@ -31,4 +34,5 @@
         <p>© 2025 Haifa Afridi. Powered by GitHub Pages.</p>
     </footer>
 </body>
+
 </html>
