--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code with Haifa</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Haifa’s Web Dev Journey
-        </h1>
-        <p class="tagline">Documenting my web dev journey, one bug at a time.</p>
+        <h1>Portfolio</h1>
+        <div class="image"><img src="/haifaafridi.github.io/Images/flower.png"></div>
+        <p class="tagline">Hi, I'm Haifa Khan Afridi</p>
     </header>
 
     <section class="about">
